# rsdl3

./: .gitmodules  Cargo.toml  README.md  TODO.md
rsdl3/: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
rsdl3-macros/: Cargo.toml
rsdl3-macros/src/: lib.rs
rsdl3-sys/: Cargo.toml  README.md  build.rs
rsdl3-sys/bindgen-wrapper/: Cargo.toml
rsdl3-sys/bindgen-wrapper/src/: main.rs
rsdl3-sys/src/: core.rs  image.rs  lib.rs  sdl_main.rs
rsdl3/src/: allocator.rs  blendmode.rs  camera.rs  clipboard.rs  events.rs  image.rs  init.rs  iostream.rs  keyboard.rs  lib.rs  logs.rs  main.rs  pixels.rs  rect.rs  render.rs  surface.rs  video.rs
rsdl3/src/runtime/: app.rs  callbacks.rs  mod.rs  sdl_main_shim.c
rsdl3/todos/: misc.md  pixels.md  render.md  surface.md  video.md
src/: init.rs  lib.rs  pixels.rs  rect.rs  render.rs  surface.rs  video.rs
