[package]
name = "rsdl3"
version = "0.1.0"
edition = "2021"

[features]
image = ["rsdl3-sys/image"]
runtime = ["dep:rsdl3-macros"]
no_panic_handler = []
no_runtime_shim = []

[dependencies]
rsdl3-sys = { path = "../rsdl3-sys" }
rsdl3-macros = { path = "../rsdl3-macros", optional = true }
libc = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
