[package]
name = "rsdl3"
version = "0.1.0"
edition = "2021"

[features]
default = []
image = ["rsdl3-sys/image"]
main = ["dep:rsdl3-macros"]
callbacks = ["main"]
app = ["callbacks", "dep:libc"]

[dependencies]
rsdl3-sys = { path = "../rsdl3-sys" }
rsdl3-macros = { path = "../rsdl3-macros", optional = true }
libc = { version = "0.2", default-features = false, optional = true }

[build-dependencies]
cc = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
